--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: 노근이 #Your awesome title
+title: Newbie Blog #Your awesome title
 email: #craft0421@gmail.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
