--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ cusdis:
 
 user:
   name: craft0421
-  pic: /assets/img/cat.jpg
+  pic: /assets/img/nogeun.jpg
   picAlt: "catbook"
   job: Just Newbie
   aboutme: true # comment this out if you don't need the 'about' page.
