--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
-title: Newbie Blog #Your awesome title
-email: #craft0421@gmail.com
+title: 내가 왜 블로그를 만들어야 하지 #Your awesome title
+email: craft0421@gmail.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
